--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Wan Fung Chui | Boxy Run</title>
+		<title>Get Ready, Get STED, Run</title>
 		<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700" rel="stylesheet">
 		<script type="text/javascript" src="js/three.min.js"></script>
         <script type="text/javascript" src="js/game.js"></script>
@@ -9,8 +9,7 @@
 	<body>
 		<div class="panel">
 			<div class="game-title">
-				<div class="title">boxy run</div>
-				<div class="byline">by <a target="_blank" href="https://wanfungchui.github.io/">wan fung chui</a></div>
+				<div class="title">Get Ready, Get STED, Run!</div>
 			</div>
 			<div class="stat">
 				<label>Score</label>
