question and answer boxes set up

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<link href="style.css" rel="stylesheet">
 	</head>
 	<body>
+		<div id="world" class="world"></div>
 		<div class="panel">
 			<div class="game-title">
 				<div class="title">Get Ready, Get STED, Run!</div>
@@ -36,8 +37,6 @@
 			<table id="ranks"></table>
 			<div class="animate-flicker" id="variable-content">Press any button to begin</div>
 		</div>
-		<div id="world"></div>
-			
 		</div>
 	</body>
 </html>
