--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 			<div class="stat">
 				<label>Score</label>
 				<p id="score">0</p>
+				<label>Correct</label>
+				<p id="correct">0</p>
 			</div>
 			<table id="controls">
 			  	<tr>
